// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi dxdISE step-card-outer"
  data-task-step-id="0"
>
  <div
    className="sc-bczRLJ jcXbjw"
  >
    <div>
      <div
        className="step-card"
      >
        <div
          className="sc-dkzDqf THfGg step-card-header"
        >
          <div>
            <h2
              className="question-info"
            >
              <span>
                Question 1
              </span>
              <span
                className="separator"
              >
                |
              </span>
              <span
                className="question-id"
              >
                ID: 
              </span>
            </h2>
          </div>
          <div>
            <div
              className="points"
            >
              1.0
               Points
            </div>
          </div>
        </div>
        <div
          className="sc-eCYdqJ kAHvtW"
        >
          Question content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StepCard matches snapshot with more than one question 1`] = `
<div
  className="sc-gsnTZi dxdISE step-card-outer"
  data-task-step-id="0"
>
  <div
    className="sc-bczRLJ jcXbjw"
  >
    <div>
      <div
        className="step-card"
      >
        <div
          className="sc-dkzDqf THfGg step-card-header"
        >
          <div>
            <h2
              className="question-info"
            >
              <span>
                Questions 1 - 3
              </span>
              <span
                className="separator"
              >
                |
              </span>
              <span
                className="question-id"
              >
                ID: 
              </span>
            </h2>
          </div>
          <div>
            <div
              className="points"
            >
              1.0
               Points
            </div>
          </div>
        </div>
        <div
          className="sc-eCYdqJ kAHvtW"
        >
          Question content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskStepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi dxdISE step-card-outer"
  data-task-step-id="0"
>
  <div
    className="sc-bczRLJ jcXbjw exercise-step"
  >
    <div>
      <div
        className="step-card"
      >
        <div
          className="sc-dkzDqf THfGg step-card-header"
        >
          <div>
            <h2
              className="question-info"
            >
              <span>
                Question 1
              </span>
              <span
                className="separator"
              >
                |
              </span>
              <span
                className="question-id"
              >
                ID: 
                1234@1
              </span>
            </h2>
          </div>
        </div>
        <div
          className="sc-eCYdqJ kAHvtW"
        />
      </div>
    </div>
  </div>
</div>
`;
